# indium

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build-windows.sh  build.bat  build.sh  config.json  imgui.ini  main.cpp  run.sh
.github/workflows/: build.yml  pages.yml  release.yml  tests.yml
2D/component/: AnimatorComponent.cpp  AnimatorComponent.hpp  AnimatorStateMachineComponent.hpp  AreaEffect2DComponent.hpp  AudioListenerComponent.hpp  AudioSourceComponent.hpp  BouncerComponent.hpp  CameraComponent.cpp  CameraComponent.hpp  CheckpointComponent.hpp  Collider2D.hpp  DecalComponent.hpp  FlipComponent.hpp  InteractableComponent.hpp  InventoryComponent.hpp  Joint2D.cpp  Joint2D.hpp  Light2DComponent.cpp  Light2DComponent.hpp  LineRendererComponent.hpp  MeshRendererComponent.hpp  NavigationAgent2DComponent.hpp  NavigationRegion2DComponent.hpp  ParticleSystemComponent.cpp  ParticleSystemComponent.hpp  PathFollowerComponent.hpp  PhysicsMaterial2DComponent.hpp  PlayerInteractorComponent.hpp  PostProcessComponent.hpp  RigidbodyComponent.cpp  RigidbodyComponent.hpp  ShapeRendererComponent.hpp  SortingGroup.hpp  SpawnPointComponent.hpp  SpriteRendererComponent.hpp  SpriteSheetComponent.hpp  TextRendererComponent.hpp  TilemapComponent.cpp  TilemapComponent.hpp  TimerComponent.hpp  (+4 more)
2D/entity/: Circle.hpp  EntityFactory.hpp  Plane.hpp  Rectangle.hpp  Tilemap.hpp
2D/sprite/: Sprite.hpp
Component/: BouncerComponent.hpp  Component.hpp  RigidbodyComponent.cpp  RigidbodyComponent.hpp
Editor/: Editor.hpp
Entity/: Circle.hpp  Entity.hpp  EntityFactory.hpp  Plane.hpp  Rectangle.hpp
Scene/: Scene.hpp
core/: AssetManager.hpp  AudioMixer.hpp  Component.hpp  Coroutine.hpp  CrashHandler.cpp  CutsceneManager.cpp  CutsceneManager.hpp  DialogueManager.hpp  Easing.hpp  Entity.hpp  EventBus.hpp  Exporter.hpp  GUI.hpp  GameSettings.hpp  IndiumEngine.hpp  InputManager.hpp  ItemManager.hpp  LightMapRenderer.hpp  LightingEnvironment.hpp  LightingShader.hpp  Logger.hpp  MenuManager.hpp  NativeScript.hpp  PlaceholderComponent.hpp  PrefabManager.hpp  ProjectManager.hpp  QuestManager.hpp  RuntimeUI.hpp  SaveManager.hpp  Screen.hpp  ScriptCompiler.cpp  ScriptCompiler.hpp  ScriptManager.hpp  StoryState.hpp  TagRegistry.hpp  Time.hpp
core/events/: GameEvents.hpp
core/nav/: NavGrid.hpp
core/scene/: Scene.hpp
core/spatial/: SpatialGrid.hpp
docs/: API.md
editor/: Editor.cpp  Editor.hpp  Launcher.hpp  PostProcessManager.hpp
editor/actions/: EditorActions.cpp
editor/panels/: BusyOverlay.hpp  ConsolePanel.cpp  ContentBrowserPanel.cpp  CutscenePanel.cpp  DialoguePanel.cpp  EditorTheme.cpp  HierarchyPanel.cpp  InputManagerPanel.cpp  InspectorPanel.cpp  ItemsPanel.cpp  MainMenuBar.cpp  QuestPanel.cpp  StoryStatePanel.cpp  ViewportPanel.cpp
include/: fa_solid_900.h  rlImGui.cpp  roboto_regular.h
packaging/macos/: Info.plist.template  assemble-bundle.sh  make-icns.sh
packaging/macos/verify/: exports.cpp  probe.cpp
runtime/: PlayerMain.cpp
src/: Config.hpp  main.cpp
tests/: cutscene_test.cpp  dialogue_test.cpp  engine_tests.cpp  entity_test.cpp  export_test.cpp  item_test.cpp  lighting_env_test.cpp  menu_test.cpp  mesh_test.cpp  quest_test.cpp  save_test.cpp
tools/: FileBrowser.hpp
website/: api.html  build_api.py  getting-started.html  index.html
website/css/: style.css
website/js/: main.js  scene.js
